--- a/adults/templates/adults/charts.html
+++ b/adults/templates/adults/charts.html
@@ -96,11 +96,12 @@ function setChart(){
 {% block content %}
 
 <div class='row'>
-        <h1>Adult data Analysis</h1>
         <div class='col-sm-6'>
+            <h3>Adult data Analysis</h3>
             <canvas id="myChart" width="400" height="400"></canvas>
         </div>
         <div class='col-sm-6'>
+            <h3>Check <a class="" href="{% url 'adult_list' %}">related data</a></h3>
             <canvas id="myChart2" width="400" height="400"></canvas>
         </div>
 </div>
